@@ -5,7 +5,7 @@
   <object class="GtkWindow" id="submit_window">
     <property name="width_request">400</property>
     <property name="height_request">500</property>
-    <property name="border_width">5</property>
+    <property name="border_width">12</property>
     <property name="window_position">center-on-parent</property>
     <property name="default_width">400</property>
     <property name="destroy_with_parent">True</property>
