@@ -5,7 +5,7 @@
   <object class="GtkWindow" id="submit_window">
     <property name="width_request">400</property>
     <property name="height_request">500</property>
-    <property name="border_width">5</property>
+    <property name="border_width">12</property>
     <property name="default_width">400</property>
     <property name="default_height">500</property>
     <property name="destroy_with_parent">True</property>
@@ -306,6 +306,7 @@
                     <property name="visible">True</property>
                     <property name="xalign">0</property>
                     <property name="wrap">True</property>
+                    <property name="justify">fill</property>
                     <property name="wrap_mode">word-char</property>
                   </object>
                   <packing>
@@ -436,6 +437,7 @@
             </child>
           </object>
           <packing>
+            <property name="expand">False</property>
             <property name="position">1</property>
           </packing>
         </child>
