@@ -11,6 +11,10 @@ software-center (3.1.14) UNRELEASED; urgency=low
       is fully created (thanks to seb128)
 
   [ Kiwinote ]
+  * data/ui/report_abuse.ui,
+    data/ui/submit_review.ui,
+    utils/submit_review.py:
+    - use a consistent 12px padding around all sides of the dialogs
   * softwarecenter/apt/aptcache.py,
     softwarecenter/db/reviews.py,
     softwarecenter/view/appdetailsview.py:
